diploma-k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    # ЗАМЕНИ 93.77.181.129. Доступ: http://grafana.93.77.181.129.nip.io
    - host: grafana.93.77.181.129.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # имя сервиса Grafana из чарта kube-prometheus-stack
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
